--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="col-lg-6">
                         <div class="chat_banner_content">
                             <!-- <div class="c_tag wow fadeInUp"><img src="img/home-chat/live_chat.png" alt=""> Learn Code</div> -->
-                            <h2 class="wow fadeInUp" data-wow-delay="0.2s">Youngovator is an Engagement First Community Platform for <strong>Kids</strong></h2>
+                            <h2 class="wow fadeInUp" data-wow-delay="0.2s">Youngovator is an Engagement First Community Platform for <strong> School Kids</strong></h2>
                             <div class="text-center pr_100 wow fadeInUp" data-wow-delay="0.4s">
                                 <a href="#" class="chat_btn btn_hover">Join Us</a>
                                 <span>(India's First Young Innovators Engagement Platform)</span>
