--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                     <div class="col-lg-6">
                         <div class="chat_banner_content">
                             <!-- <div class="c_tag wow fadeInUp"><img src="img/home-chat/live_chat.png" alt=""> Learn Code</div> -->
-                            <h2 class="wow fadeInUp" data-wow-delay="0.2s">Youngovator is an Engagement First Community Platform for <strong> School Kids</strong></h2>
+                            <h2 class="wow fadeInUp" data-wow-delay="0.2s">India's First Curated Social and Tech Community for <strong> Young Kids</strong></h2>
                             <div class="text-center pr_100 wow fadeInUp" data-wow-delay="0.4s">
                                 <a href="#" class="chat_btn btn_hover">Join Us</a>
                                 <span>(India's First Young Innovators Engagement Platform)</span>
@@ -339,37 +339,37 @@
                     <div class="col-lg-2 col-md-4 col-sm-6">
                         <a href="#" class="s_integration_item wow fadeInLeft">
                             <img src="img/home-chat/livesessions.png" alt="">
-                            <h5>Live Sessions</h5>
+                            <h5>Peer To Peer<br>  Learning</h5>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-4 col-sm-6">
                         <a href="#" class="s_integration_item wow fadeInLeft" data-wow-delay="0.2s">
                             <img src="img/home-chat/dailyquiz.png" alt="">
-                            <h5>Daily Quiz</h5>
+                            <h5>Regular Quiz </h5><br>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-4 col-sm-6">
                         <a href="#" class="s_integration_item wow fadeInLeft" data-wow-delay="0.4s">
                             <img src="img/home-chat/doubt.png" alt="">
-                            <h5>Doubt Sessions</h5>
+                            <h5>Project Repository </h5><br>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-4 col-sm-6">
                         <a href="#" class="s_integration_item wow fadeInLeft" data-wow-delay="0.6s">
                             <img src="img/home-chat/reports.png" alt="">
-                            <h5>Reports</h5>
+                            <h5>Reports</h5> <br>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-4 col-sm-6">
                         <a href="#" class="s_integration_item wow fadeInLeft" data-wow-delay="0.8s">
                             <img src="img/home-chat/assesment.png" alt="">
-                            <h5>Assesments</h5>
+                            <h5>National level competitions</h5>
                         </a>
                     </div>
                     <div class="col-lg-2 col-md-4 col-sm-6">
                         <a href="#" class="s_integration_item wow fadeInLeft" data-wow-delay="0.8s">
                             <img src="img/home-chat/mobilecoding.png" alt="">
-                            <h5>Mobile Coding</h5>
+                            <h5>Mobile Coding Editors</h5>
                         </a>
                     </div>
                 </div>
