--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <header class="header_area">
             <nav class="navbar navbar-expand-lg menu_one">
                 <div class="container">
-                    <a class="navbar-brand" href="#"><img src="img/logo.png" srcset="img/logo2x.png 2x" alt="logo"></a>
+                    <a class="navbar-brand" href="#"><img src="img/logo.png" srcset="img/logo.png" alt="logo"></a>
                     <a class="btn_get btn_hover mobile_btn ml-auto" href="#get-app">Get Started</a>
                     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="menu_toggle">
