--- a/index.html
+++ b/index.html
@@ -115,35 +115,36 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a title="Pages" class="dropdown-toggle nav-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" href="#">Features</a>
+                                <a href="service.html" title="Pages" class=" nav-link" data-toggle="" role="button" aria-haspopup="true" aria-expanded="false" >Features</a>
                             </li>
                             <!-- <li class="nav-item  submenu mega_menu">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></a>
                             </li> -->
                             
                             <li class="nav-item dropdown submenu">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" href="coming-soon.html" role="button" data-toggle="" aria-haspopup="true" aria-expanded="false">
                                     Code-Playground
                                 </a>
                             </li>
                             <li class="nav-item dropdown submenu">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" href="" role="button" data-toggle="" aria-haspopup="true" aria-expanded="false">
                                     About Us
                                 </a>
                                 <ul class="dropdown-menu">
-                                    <li class="nav-item"><a href="" class="nav-link">Team</a></li>
-                                    <li class="nav-item"><a href="" class="nav-link">Mission & Vision</a></li>
-                                    <li class="nav-item"><a href="" class="nav-link">Company Overview</a></li>
+                                    <li class="nav-item"><a href="team.html" class="nav-link">Team</a></li>
+                                    <li class="nav-item"><a href="process.html" class="nav-link">Mission & Vision</a></li>
+                                    <li class="nav-item"><a href="about.html" class="nav-link">Company Overview</a></li>
                                 </ul>
                             </li>
 
                             <li class="nav-item dropdown submenu mega_menu">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <a class="nav-link dropdown-toggle" href="contact.html" role="button" data-toggle="" aria-haspopup="true" aria-expanded="false">
                                 Contact Us
                                 </a>
                             </li>
                         </ul>
                     </div>
+
                     <div class="alter_nav">
                         <ul class="navbar-nav search_cart menu">
                             <li class="nav-item search"><a class="nav-link search-btn" href="javascript:void(0);"><i class="ti-search"></i></a></li>
